recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:3: error: '(' expected but identifier found.
	if steps>=0
           ^